# artcord

./: .example.env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build-vendors.sh  dev.sh  docker-compose.yaml  docker-compose.yml  flake.nix  index.html  input.css  release.sh  run.sh  rust-toolchain.toml  shell.nix  ssr_debug.sh  tailwind.config.js  tree.txt  watch.sh
.cargo/: config.toml
artbounty-web-backend/: Cargo.toml
artbounty-web-backend/src/: main.rs
artbounty-web-frontend/: Cargo.toml
artbounty-web-frontend/src/: app.rs  lib.rs  logger.rs  toolbox.rs
artbounty-web-frontend/src/app/: components.rs  page.rs
artcord/: Cargo.toml
artcord-actix/: Cargo.toml
artcord-actix/src/: create_server.rs  lib.rs  server.rs
artcord-benchmark/: Cargo.toml
artcord-benchmark/src/: main.rs
artcord-builder/: Cargo.toml  index.html
artcord-builder/src/: main.rs
artcord-http/: Cargo.toml
artcord-http/src/: server.rs
artcord-http/src/server/: ws_connection.rs
artcord-leptos/: Cargo.toml
artcord-leptos-web-sockets/: Cargo.toml
artcord-leptos-web-sockets/src/: channel.rs  channel_builder.rs  lib.rs  runtime.rs
artcord-leptos/src/: app.rs  lib.rs
artcord-leptos/src/app/: global_state.rs  hooks.rs  pages.rs  utils.rs
artcord-leptos/src/app/components/: gallery.rs  navbar.rs  profile_gallery.rs
artcord-leptos/src/app/hooks/: use_graph.rs  use_ws_live_stats.rs  use_ws_live_throttle_cache.rs
artcord-leptos/src/app/pages/: account.rs  admin.rs  gallery.rs  home.rs  login.rs  main_gallery.rs  not_found.rs  profile.rs  register.rs  user_gallery.rs
artcord-leptos/src/app/pages/admin/: overview.rs  throttle_cached.rs  ws_live.rs  ws_old.rs
artcord-leptos/src/app/utils/: client_msg_wrap.rs  img_resize.rs  img_resized.rs  server_msg_wrap.rs  ws_runtime.rs
artcord-mongodb/: Cargo.toml
artcord-mongodb/src/: database.rs
artcord-mongodb/src/database/: model.rs  models.rs  query.rs
artcord-mongodb/src/database/model/: acc.rs  agg_user_gallery.rs  allowed_channel.rs  allowed_guild.rs  http.rs  ws_ip.rs  ws_ip_manager.rs  ws_req_stat.rs
artcord-mongodb/src/database/models/allowed_channel/: bot.rs
artcord-mongodb/src/database/models/allowed_role/: bot.rs  queries.rs
artcord-mongodb/src/database/models/auto_reaction/: serd.rs
artcord-mongodb/src/database/query/: acc.rs  acc_session.rs  agg_main_gallery.rs  agg_user_gallery.rs  allowed_channel.rs  allowed_guild.rs  allowed_role.rs  auto_reaction.rs  img.rs  migration.rs  user.rs  ws_statistic.rs
artcord-serenity/: Cargo.toml
artcord-serenity/src/: bot.rs  commands.rs  create_bot.rs  lib.rs
artcord-serenity/src/bot/commands/: add_channel.rs  leave.rs  remove_channel.rs  remove_role.rs  show_guilds.rs  sync.rs  who.rs
artcord-serenity/src/bot/events/: interaction_create.rs  reaction_remove.rs
artcord-serenity/src/bot/hooks/: save_attachments.rs
artcord-serenity/src/commands/: add_channel.rs  add_guild.rs  add_role.rs  guilds.rs  remove_guild.rs  show_guilds.rs  show_roles.rs  test.rs  verify.rs
artcord-serenity/src/events/: message.rs  message_delete.rs
artcord-serenity/src/hooks/: hook_add_reaction.rs  save_attachments.rs
artcord-state/: Cargo.toml
artcord-state/src/: aggregation.rs  lib.rs  message.rs  misc.rs  model.rs  util.rs  ws.rs
artcord-state/src/aggregation/: server_msg_img.rs
artcord-state/src/global/: throttle.rs
artcord-state/src/message/: client_msg.rs  debug_client_msg.rs  debug_msg_key.rs  debug_server_msg.rs  prod_client_msg.rs  prod_perm_key.rs  prod_server_msg.rs  server_msg.rs
artcord-state/src/misc/: img_quality.rs  registration_invalid.rs  throttle_connection.rs  throttle_threshold.rs
artcord-state/src/model/: acc.rs  acc_session.rs  allowed_channel.rs  allowed_guild.rs  allowed_role.rs  auto_reaction.rs  connection_ws.rs  img.rs  migration.rs  statistics.rs  user.rs  ws_statistics.rs
artcord-state/src/shared_global/: throttle.rs
artcord-state/src/util/: time.rs
artcord-tungstenite/: Cargo.toml
artcord-tungstenite/src/: lib.rs  user_task.rs  ws.rs  ws_app.rs  ws_route.rs  ws_throttle.rs
artcord-tungstenite/src/ws/: con.rs  throttle.rs
artcord-tungstenite/src/ws/con/: req.rs  throttle_stats_listener_tracker.rs  tracker.rs
artcord-tungstenite/src/ws/con/req/: res.rs  stats.rs
artcord-tungstenite/src/ws/con/req/res/: auth.rs  gallery.rs  user.rs  ws_ip_stats.rs  ws_req_stats.rs  ws_stats.rs  ws_throttle.rs
artcord-tungstenite/src/ws_app/: on_connection.rs  on_msg.rs  ws_statistic.rs  ws_throttle.rs
artcord-tungstenite/src/ws_app/on_connection/: con_task.rs
artcord-tungstenite/src/ws_app/on_connection/con_task/: on_msg.rs  on_req.rs
artcord-tungstenite/src/ws_app/on_connection/con_task/on_req/: req_task.rs
artcord-tungstenite/src/ws_app/on_connection/con_task/on_req/req_task/: res.rs
artcord-tungstenite/src/ws_app/on_connection/con_task/on_req/req_task/res/: admin_statistics.rs  live_ws_stats.rs  login.rs  logout.rs  main_gallery.rs  registration.rs  statistics.rs  user.rs  user_gallery.rs  ws_stats.rs  ws_stats_first_page.rs  ws_stats_paged.rs  ws_stats_ranged.rs  ws_stats_total_count.rs  ws_stats_with_paginatoin.rs  ws_throttle_cached.rs
artcord-tungstenite/src/ws_route/: ws_admin_throttle.rs  ws_login.rs  ws_logout.rs  ws_main_gallery.rs  ws_registration.rs  ws_statistics.rs  ws_user.rs  ws_user_gallery.rs
artcord/src/: main.rs
legacy/: csr_debug.sh  docker-compose.yml  docker.sh  fr_debug.sh  style.sh  tailwind.config.js
legacy/artcord-leptos-web-sockets/: Cargo.toml
legacy/artcord-leptos-web-sockets/src/: channel.rs  channel_builder.rs  lib.rs  runtime.rs
legacy/artcord-leptos-web-sockets/src/channel/: channel_with_timeout.rs
legacy/artcord-leptos-web-sockets/tests/: runtime.rs
legacy/artcord-mongodb/: Cargo.toml
legacy/artcord-mongodb/src/database/model/: acc_session.rs  agg_main_gallery.rs  allowed_role.rs  auto_reaction.rs  img.rs  migration.rs  user.rs  ws_ip_manager.rs
mongo/: .gitignore  docker-compose.yaml
src/: app.rs  bot.rs  database.rs  lib.rs  main.rs  message.rs  server.rs  (+2 more)
(+148 files in other folders)
