[workspace]
resolver = "2"
members = [
    "artcord",
    "artcord-actix", "artcord-builder",
    "artcord-leptos",
    "artcord-leptos-web-sockets",
    "artcord-mongodb",
    "artcord-serenity",
    "artcord-state",
    "artcord-tungstenite",
    #   "artcord-benchmark",
]

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3


[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"




[[workspace.metadata.leptos]]
name = "artcord"
bin-package = "artcord"
lib-package = "artcord-leptos"
output-name = "leptos_start5"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "assets"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = true
env = "DEV"
lib-profile-release = "wasm-release"
bin-features = []
lib-features = [ "csr" ]
bin-default-features = false
lib-default-features = false
