# [workspace]
# resolver = "2"
# members = [
#   "artcord",
#   "artcord-http",
#   "artcord-builder",
#   "artcord-leptos",
#   "artcord-leptos-web-sockets",
#   "artcord-mongodb",
#   "artcord-serenity",
#   "artcord-state",
#   "artcord-tungstenite",
#   "artcord-benchmark",
# ]

[package]
name = "heyadora_art"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 0

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
axum = { version = "0.7.9", optional = true }
console_error_panic_hook = "0.1.7"
gloo = { version = "0.11.0", features = ["file", "futures"] }
indexmap = "2.7.1"
leptos = { version = "0.7.7", features = ["rkyv"] }
leptos_axum = { version = "0.7.7", optional = true }
leptos_router = { version = "0.7.7" }
ordered-float = { version = "5.0.0", features = ["rkyv"] }
reactive_stores = "0.1.7"
rkyv = "0.8.10"
server_fn = { version = "0.7.7", features = ["rkyv"] }
surrealdb = { version = "2.2.1", features = [
    "kv-surrealkv",
    "kv-mem",
], optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.2", features = ["compression-full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v4", "js"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "HtmlDivElement",
    "EventTarget",
    "DataTransfer",
    "DragEvent",
    "Blob",
    "ReadableStream",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Element",
    "ResizeObserverSize",
    "DomRectReadOnly",
    "MutationObserver",
    "IntersectionObserverEntry",
    "MutationObserverInit",
    "Node",
] }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tower",
    "dep:tokio",
    "dep:surrealdb",
]

[package.metadata.leptos]
name = "heyadora_art"
output-name = "heyadora_art"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = true
env = "DEV"
lib-profile-release = "wasm-release"
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-default-features = false
lib-default-features = false
