[workspace]
resolver = "2"
members = ["artbounty-web-backend", "artbounty-web-frontend"]

[workspace.dependencies]
artbounty-web-frontend = { path = "artbounty-web-frontend" }
axum = { version = "0.7.9" }
leptos_axum = { version = "0.7.7" }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["compression-full"] }
surrealdb = { version = "2.2.1", features = ["kv-surrealkv", "kv-mem"] }
console_error_panic_hook = "0.1.7"
gloo = { version = "0.11.0", features = ["file", "futures"] }
indexmap = "2.7.1"
indextree = "4.7.3"
leptos = { version = "0.7.7", features = ["rkyv"] }
leptos_router = { version = "0.7.7" }
ordered-float = { version = "5.0.0", features = ["rkyv"] }
reactive_stores = "0.1.7"
rkyv = "0.8.10"
server_fn = { version = "0.7.7", features = ["rkyv"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v4", "js"] }
wasm-bindgen = "0.2.100"
send_wrapper = { version = "0.6.0" }
sha2 = { version = "0.10.8" }
web-sys = { version = "0.3.77", features = [
    "HtmlDivElement",
    "EventTarget",
    "DataTransfer",
    "DragEvent",
    "Blob",
    "ReadableStream",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Element",
    "ResizeObserverSize",
    "DomRectReadOnly",
    "MutationObserver",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "MutationObserverInit",
    "Node",
] }


[[workspace.metadata.leptos]]
name = "artbounty"
bin-package = "artbounty-web-backend"
lib-package = "artbounty-web-frontend"
output-name = "artbounty_1"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = true
env = "DEV"
lib-profile-release = "wasm-release"
bin-features = []
lib-features = ["hydrate"]
bin-default-features = false
lib-default-features = false
