[package]
name = "artcord-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6.5" }
actix-web = { version = "4.5.1", features = ["macros"] }
leptos_actix = { version = "0.6.6" }
leptos = { version = "0.6.6", features = ["default"] }
actix-web-actors = { version = "4.3.0", features = [] }
actix = { version = "0.13.3", features = [] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.57"
artcord-state = { path = "../artcord-state" }
artcord-mongodb = { path = "../artcord-mongodb" }
artcord-leptos = { path = "../artcord-leptos" }
cfg-if = "1"
tracing = { version = "0.1.40" }
tracing-subscriber = {version ="0.3.18", features = ["env-filter"] }
url = "2.5.0"
tokio-tungstenite = "0.21.0"
artcord-leptos-web-sockets = { path = "../artcord-leptos-web-sockets" }

[features]
development = []
