[package]
name = "artcord-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
futures = "0.3.30"
notify = "6.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40"  }
tracing-subscriber = {version ="0.3.18", features = ["env-filter"] }
cfg-if = "1"
tokio-tungstenite = "0.21.0"
#log = { version = "0.4.21", features = ["max_level_warn"] }

[features]
production = ["tracing/max_level_warn"]
