[package]
name = "artcord-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-files = { version = "0.6.5" }
# actix-web = { version = "4.5.1", features = ["macros"] }
# leptos_actix = { version = "0.6.12" }
leptos = { version = "0.6.12", features = ["default"] }
# actix-web-actors = { version = "4.3.0", features = [] }
# actix = { version = "0.13.3", features = [] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
thiserror = "1.0.57"
artcord-state = { path = "../artcord-state" }
artcord-mongodb = { path = "../artcord-mongodb" }
artcord-leptos = { path = "../artcord-leptos" }
cfg-if = "1"
tracing = { version = "0.1.40" }
tracing-subscriber = {version ="0.3.18", features = ["env-filter"] }
url = "2.5.0"
tokio-tungstenite = "0.21.0"
artcord-leptos-web-sockets = { path = "../artcord-leptos-web-sockets" }
# actix-http = "3.7.0"
leptos_meta = {version = "0.6.12"}
leptos_router = {version = "0.6.12"}
leptos_reactive = "0.6.12"
leptos_integration_utils = { version = "0.6.12" }
leptos_dom = "0.6.12"
httparse = { version = "1.9.4" }
serde_json = "1.0.117"
chrono = "0.4.34"

[features]
serve_csr = []
ssr = ["artcord-leptos/ssr", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos_dom/ssr", "leptos_reactive/ssr"]
csr = ["artcord-leptos/csr", "leptos/csr", "leptos_meta/csr", "leptos_router/ssr", "leptos_dom/csr", "leptos_reactive/csr"]
development = []
