[package]
name = "artcord-leptos-web-sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = "0.4.34"
const-random = "0.1.17"
js-sys = "0.3.68"
leptos = "0.6.6"
leptos-use = "0.10.3"
serde = "1.0.197"
thiserror = "1.0.57"
uuid = "1.7.0"
wasm-bindgen = { version = "0.2.92", features = [] }
web-sys = { version = "0.3.68", features = ["WebSocket"] }
tracing = { version = "0.1.40", features = ["release_max_level_warn"] }