[package]
name = "artcord-leptos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.6", features = ["default"] }
leptos_meta = { version = "0.6.6", features = ["default"] }
leptos_router = { version = "0.6.6", features = ["default"] }
wasm-bindgen = { version = "0.2.92", features = [] }
leptos-use = { version = "0.10.3", features = [] }
web-sys = { version = "0.3.68", features = ["WebSocket"] }
js-sys = { version = "0.3.68", features = [] }
cfg-if = "1"
artcord-leptos-web-sockets = { path = "../artcord-leptos-web-sockets" }
artcord-state = { path = "../artcord-state" }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = "0.4.34"
gloo-net = "0.5.0"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0" }
log = "0.4.21"
tracing-wasm = "0.2.1"
tracing = { version = "0.1.40", features = ["release_max_level_warn"] }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
development = []