[package]
name = "artcord-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.9.0"
chrono = "0.4.34"
field_types = "1.1.0"
serde = "1.0.197"
bincode = "1.3.3"
artcord-leptos-web-sockets = { path = "../artcord-leptos-web-sockets" }
tracing = "0.1.40"
uuid = "1.7.0"