[package]
name = "artcord-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.9.0"
chrono = { version = "0.4.34",  features = ["serde"] }
field_types = "1.1.0"
serde = { version = "1.0.197" }
bincode = "1.3.3"
artcord-leptos-web-sockets = { path = "../artcord-leptos-web-sockets" }
tracing = "0.1.40"
uuid = "1.7.0"
strum = { version = "0.26.2", features = ["derive"] }
leptos = { version = "0.6.6", features = ["default"] }
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
thiserror = "1.0.57"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }