[package]
name = "artcord-tungstenite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
artcord-state = { path = "../artcord-state" }
artcord-leptos-web-sockets = { path = "../artcord-leptos-web-sockets" }
tracing = { version = "0.1.40" }
artcord-mongodb = { path = "../artcord-mongodb" }
thiserror = "1.0.57"
bincode = "1.3.3"
mongodb = "2.8.1"
chrono = "0.4.34"
cfg-if = "1"
tokio-util = { version = "0.7.10", features = ["full"] }
uuid = "1.7.0"
rand = "0.8.5"
bcrypt = "0.15.1"
enum_index = "0.2.0"
enum_index_derive = "0.2.0"

[features]
development = []
beta = []
