[package]
name = "artcord-leptos-web-sockets"
version = "0.1.0"
edition = "2021"

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
chrono = "0.4.34"
const-random = "0.1.17"
js-sys = "0.3.68"
leptos = "0.6.6"
leptos-use = "0.10.3"
serde = "1.0.197"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4"] }
wasm-bindgen = { version = "0.2.92", features = [] }
web-sys = { version = "0.3.68", features = ["WebSocket"] }
tracing = { version = "0.1.40" }
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
futures = "0.3.30"
bincode = "1.3.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]  }
tracing-subscriber-wasm = "0.1.0"
console_error_panic_hook = "0.1.7"

#tokio = { version = "1.38.0", features = ["signal"] }
#wasm-bindgen-test = "0.2.50"
# fasthash = "0.4.0"
