[package]
name = "artcord-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.9.0"
chrono = "0.4.34"
futures = "0.3.30"
mongodb = "2.8.1"
thiserror = "1.0.57"
tracing = { version = "0.1.40" }
artcord-state = { path = "../artcord-state" }
cfg-if = "1"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.197" }
field_types = "1.1.0"
strum = { version = "0.26.2" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }

[features]
development = []
# default = ["ssr"]
# ssr = []
